[package]
name = "fielder"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
geo = "0.21.0"
# proj = "0.28.0"
wkt = { version = "0.10.3", features = ["serde"] }
kml = "0.8.7"
geojson = { version = "0.24.2" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
geo-types = "0.7.15"
shapefile = { version = "0.6.0", features = ["geo-types"] }
