[package]
name = "fielder"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.16.0", features = ["v4", "serde"] }
geo = "0.21.0"
wkt = { version = "0.10.3", features = ["serde"] }
kml = "0.8.7"
geojson = { version = "0.24.2" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
geo-types = "0.7.15"
shapefile = { version = "0.6.0", features = ["geo-types"] }
clap = { version = "4.5.35", features = ["derive"] }
chrono = { version = "0.4.40", features = ["alloc", "serde"] }

[target.x86_64-pc-windows-msvc.release]
lto = true
codegen-units = 1
opt-level = 3
